ajustes de code review